--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sedicii/hapi-api-key",
-  "version": "3.3.1",
+  "version": "3.3.2",
   "description": "Authentication strategy for API keys",
   "main": "index.js",
   "repository": {
@@ -12,16 +12,16 @@
   },
   "homepage": "https://github.com/sedicii/hapi-api-key",
   "dependencies": {
-    "@hapi/hoek": "^6.1.3",
-    "@hapi/boom": "^7.4.3"
+    "@hapi/boom": "^10.0.1",
+    "@hapi/hoek": "^11.0.4"
   },
   "devDependencies": {
-    "code": "^5.1.2",
+    "@hapi/hapi": "^21.3.3",
+    "@hapi/lab": "^25.2.0",
+    "code": "^5.2.4",
     "eslint": "^5.16.0",
-    "eslint-config-firstandthird": "^4.3.0",
-    "eslint-plugin-import": "^2.8.0",
-    "@hapi/hapi": "^18.1.0",
-    "@hapi/lab": "^18.0.2"
+    "eslint-config-firstandthird": "^4.5.0",
+    "eslint-plugin-import": "^2.29.1"
   },
   "keywords": [
     "hapi",
